--- a/css/index.css
+++ b/css/index.css
@@ -31,14 +31,20 @@ a {
     flex-wrap: wrap;
     flex-direction: row;
     align-items: center;
+    width: 80%;
+    margin: 0 auto;
 }
 
 .col-33 {
-    width: 33%;
+    flex: 1 1 33.33%;
+}
+
+.form-search {
+    width: 100%;
 }
 
 .form-search-text {
-    width: 50%;
+    /*width: 70%;*/
     border: none;
     -webkit-box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.75);
@@ -47,12 +53,13 @@ a {
 }
 
 .form-search-submit {
-    width: 20%;
+    /*width: 20%;*/
     padding: 6px;
     border: none;
     color: white;
     background-color: royalblue;
     margin-top: 2px;
+    font-size: 0.7em;
 }
 
 .icons {
@@ -87,7 +94,7 @@ a {
 }
 
 @media (max-device-width: 940px) {
-    .col-33 {
-        /*width: 100%;*/
+    .flex {
+        justify-content: center;
     }
 }
