--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 html {
     font-family: 'Raleway', sans-serif;
     font-size: 95%;
@@ -7,6 +11,9 @@ body {
     background: url("../img/zadanie_1_bg.jpg");
     -webkit-background-size: cover;
     background-size: cover;
+    width: 72%;
+    margin: 0 auto;
+    padding-top: 1.5em;
 }
 
 a {
@@ -31,7 +38,6 @@ a {
     flex-wrap: wrap;
     flex-direction: row;
     align-items: center;
-    width: 80%;
     margin: 0 auto;
 }
 
@@ -44,17 +50,17 @@ a {
 }
 
 .form-search-text {
-    /*width: 70%;*/
+    width: 65%;
     border: none;
     -webkit-box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.75);
     box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.75);
-    padding: 5px;
+    padding: 10px;
 }
 
 .form-search-submit {
-    /*width: 20%;*/
-    padding: 6px;
+    width: 25%;
+    padding: 10px;
     border: none;
     color: white;
     background-color: royalblue;
@@ -65,19 +71,36 @@ a {
 .icons {
     display: flex;
     justify-content: flex-end;
-    font-size: 0.9em;
+}
+
+.icons-set > span {
+    font-size: 0.7em;
 }
 
 .icons-set {
-    margin-right: 20px;
+    margin-right: 25px;
 }
 
 .icons-set:last-child{
     margin-right: 0;
 }
 
+.navbar {
+    margin: 1em 0;
+    font-size: 1.1em;
+    background: white;
+    -webkit-box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.75);
+}
+
+.navbar p {
+    margin: 0;
+    padding: 10px 0;
+}
+
 .footer-links {
-    font-size: 0.9em;
+    font-size: 0.7em;
 }
 
 .footer-links a {
@@ -93,8 +116,33 @@ a {
     border-right: 1px solid #b3b3b3;
 }
 
-@media (max-device-width: 940px) {
-    .flex {
+@media (max-device-width: 664px) {
+    .col-m-100 {
+        flex: 1 1 100%;
+    }
+
+    .col-33 {
+        margin: 1em 0;
+    }
+
+    /*.m-mt {
+        margin: 1em 0;
+    }*/
+
+    .form-search-text {
+        width: 100%;
+    }
+
+    .form-search-submit {
+        width: 100%;
+    }
+
+    .icons {
         justify-content: center;
+    }
+
+    .footer-link {
+        border-right: none;
+        padding: 0;
     }
 }
