Still working on RWD.

--- a/css/index.css
+++ b/css/index.css
@@ -33,18 +33,6 @@ a {
     text-align: center;
 }
 
-.flex {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    align-items: center;
-    margin: 0 auto;
-}
-
-.col-33 {
-    flex: 1 1 33.33%;
-}
-
 .form-search {
     width: 100%;
 }
@@ -101,19 +89,23 @@ a {
 
 .footer-links {
     font-size: 0.7em;
+    margin: 0;
+    padding: 0;
+    list-style: none;
 }
 
-.footer-links a {
-    color: #595959;
+.footer-links li {
+    display: inline;
 }
 
-.footer-links a:last-of-type {
+.footer-links li:last-of-type {
     border-right: none;
 }
 
 .footer-link {
-    padding: 0 15px 0 15px;
     border-right: 1px solid #b3b3b3;
+    color: #595959;
+    padding: 0 10px;
 }
 
 @media (max-device-width: 664px) {
@@ -121,13 +113,13 @@ a {
         flex: 1 1 100%;
     }
 
-    .col-33 {
+    /*.col-33 {
         margin: 1em 0;
     }
 
-    /*.m-mt {
+    .m-mt {
         margin: 1em 0;
-    }*/
+    }
 
     .form-search-text {
         width: 100%;
@@ -135,14 +127,42 @@ a {
 
     .form-search-submit {
         width: 100%;
+    }*/
+
+    .header div {
+        margin: 1em 0 2em 0;
+        text-align: center;
+    }
+
+    .header div:first-child {
+        margin: 0;
+    }
+    
+    .mobile-hide {
+        display: none;
     }
 
     .icons {
         justify-content: center;
     }
 
+    .icons-set {
+        text-align: center;
+    }
+
+    .footer-links li {
+        display: block;
+        margin: 0.1em 0;
+    }
+
     .footer-link {
         border-right: none;
         padding: 0;
+    }
+}
+
+@media (min-device-width: 665px) {
+    .large-hide {
+        display: none;
     }
 }
