--- a/css/index.css
+++ b/css/index.css
@@ -9,8 +9,6 @@ html {
 
 body {
     background: url("../img/zadanie_1_bg.jpg");
-    -webkit-background-size: cover;
-    background-size: cover;
     width: 72%;
     margin: 0 auto;
     padding-top: 1.5em;
@@ -18,7 +16,6 @@ body {
 
 a {
     text-decoration: none;
-    color: black;
 }
 
 .uppercase {
@@ -82,9 +79,121 @@ a {
     box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.75);
 }
 
-.navbar p {
-    margin: 0;
+nav {
+    position: relative;
+}
+
+nav ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+nav ul li a {
+    color: black;
+}
+
+nav > ul {
+    display: flex;
+    justify-content: center;
     padding: 10px 0;
+}
+
+nav > ul > li {
+    margin: 0 30px;
+}
+
+nav > ul > li > a {
+    text-transform: uppercase;
+    position: relative;
+}
+
+nav > ul > li:hover > a {
+    color: royalblue;
+}
+
+nav > ul > li > a:hover::after {
+    content: "";
+    display: block;
+    position: absolute;
+    bottom: -10px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background: royalblue;
+}
+
+nav > ul > li:hover > ul {
+    display: flex;
+    position: absolute;
+    background: white;
+    left: 0;
+    top: 40px;
+    width: 100%;
+    -webkit-box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.75);
+}
+
+nav > ul > li:last-of-type a {
+    color: red;
+}
+
+nav > ul > li:last-of-type:hover {
+    border-bottom: 1px solid red;
+}
+
+nav > ul > li > a i {
+    margin-right: 5px;
+}
+
+nav > ul > li > ul {
+    display: none;
+}
+
+nav > ul > li > ul > li > a {
+    text-transform: uppercase;
+}
+
+nav > ul > li > ul > li {
+    margin: 2em;
+    text-align: left;
+}
+
+nav > ul > li > ul > li:hover > a {
+    color: royalblue;
+}
+
+nav > ul > li > ul > li > ul {
+    border-left: 1px solid #b3b3b3;
+    padding: 5px 0;
+    margin-top: 15px;
+}
+
+nav > ul > li > ul > li > ul > li {
+    margin: 10px 0;
+    padding: 10px;
+}
+
+nav > ul > li > ul > li > ul > li:first-child {
+    margin-top: 0;
+}
+
+nav > ul > li > ul > li > ul > li:last-child {
+    margin-bottom: 0;
+}
+
+nav > ul > li > ul > li > ul > li:hover {
+    background: rgba(234, 229, 229, .5);
+    border-left: 1px solid royalblue;
+}
+
+
+nav > ul > li > ul > li > ul > li:hover ~ ul{
+    border-left-color: royalblue;
+}
+
+nav > ul > li > ul > li > ul > li:hover > a {
+    color: royalblue;
 }
 
 .footer-links {
