--- a/css/index.css
+++ b/css/index.css
@@ -138,8 +138,15 @@ nav > ul > li:last-of-type a {
     color: red;
 }
 
-nav > ul > li:last-of-type:hover {
-    border-bottom: 1px solid red;
+nav > ul > li:last-of-type a:hover::after {
+    content: "";
+    display: block;
+    position: absolute;
+    bottom: -10px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background: red;
 }
 
 nav > ul > li > a i {
