--- a/css/index.css
+++ b/css/index.css
@@ -55,6 +55,7 @@ a {
 
 .icons {
     display: flex;
+    flex-wrap: wrap;
     justify-content: flex-end;
 }
 
@@ -95,6 +96,7 @@ nav ul li a {
 nav > ul {
     display: flex;
     justify-content: center;
+    align-items: center;
     padding: 10px 0;
 }
 
@@ -126,8 +128,9 @@ nav > ul > li:hover > ul {
     display: flex;
     position: absolute;
     background: white;
+    flex-wrap: wrap;
     left: 0;
-    top: 40px;
+    top: 100%;
     width: 100%;
     -webkit-box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.75);
@@ -225,7 +228,7 @@ nav > ul > li > ul > li > ul > li:hover > a {
 }
 
 @media (max-device-width: 664px) {
-    .col-m-100 {
+    .col-m-1 {
         flex: 1 1 100%;
     }
 
@@ -247,7 +250,6 @@ nav > ul > li > ul > li > ul > li:hover > a {
 
     .header div {
         margin: 1em 0 2em 0;
-        text-align: center;
     }
 
     .header div:first-child {
@@ -274,6 +276,36 @@ nav > ul > li > ul > li > ul > li:hover > a {
     .footer-link {
         border-right: none;
         padding: 0;
+    }
+}
+
+@media (max-device-width: 768px) {
+    .col-t-1 {
+        flex: 1 1 100%;
+    }
+
+    .header div {
+        text-align: center;
+    }
+
+    nav > ul {
+        padding: 10px 10px;
+    }
+
+    nav > ul > li {
+        margin: 0 10px;
+    }
+
+    nav > ul > li > ul > li{
+        flex: 1 1 50%;
+    }
+    
+    nav > ul > li > ul > li > ul {
+        display: none;
+    }
+
+    nav > ul > li > ul > li:hover > ul {
+        display: block;
     }
 }
 
