--- a/css/index.css
+++ b/css/index.css
@@ -297,7 +297,8 @@ nav > ul > li > ul > li > ul > li:hover > a {
     }
 
     nav > ul > li > ul > li{
-        flex: 1 1 50%;
+        flex: 1 1 40%;
+        margin: 1em;
     }
     
     nav > ul > li > ul > li > ul {
